# ug-python-sdk

./: LICENSE  README.md  pyproject.toml
pug_protocol/: messages.py  speech.py  types.py  utilities.py
pug_protocol/client/: admin_client.py  client.py  session.py
pug_protocol/rpc/: rpc.py  websocket.py
ug_python_sdk/: __init__.py  configs.py  speech.py
ug_python_sdk/client/: admin_client.py  oauth.py  session.py
ug_python_sdk/rpc/: __init__.py  channel.py  utils.py  websocket.py
