[project]
name = "pug-protocol"
version = "0.1.0"
description = ""
authors = [
    {name = "Dan Gittik", email = "dan.gittik@uglabs.io"}
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
websockets = "^15.0.1"
pydantic = "^2.11.7"
httpx = "^0.28.1"
