[project]
name = "ug-python-sdk"
version = "3.0.3"
description = "Python SDK for the UG AI Platform"
authors = [
    {name = "UG Labs", email = "support@uglabs.io"}
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "ug_python_sdk"}]

[tool.poetry.dependencies]
websockets = "^15.0.1"
pydantic = "^2.11.7"
httpx = "^0.28.1"
aiohttp = "^3.13.3"
